--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,16 +1,51 @@
-
+.nav-1{
+    text-align:center;
+    background-color: #98B4D4;
+    font-size:50px;
+}
 
 .nav-container{
     display:flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     overflow:hidden;
+    /* background-color:#45B8AC; */
     
 }
 
- .nav-1{
+.nav-container > div{
+    /* background-color: #98B4D4; */
+    padding:12px 14px;
+    
+   
+    
+}
+
+.li-1{
+    width: 300px;
+    height: 20px;
+    border: 3px solid #45B8AC;
+    border-radius: 3px;
+    background-color:#7FCDCD;
+}
+.li-2{
+    width: 300px;
+    height: 20px;
+    border: 3px solid #45B8AC;
+    border-radius: 3px;
+    background-color: #7FCDCD;
+}
+.li-3{
+    width: 300px;
+    height: 20px;
+    border: 3px solid #45B8AC;
+    border-radius: 3px;
+    background-color: #7FCDCD;
+}
+
+  /* .nav-1{
     padding: 12px 16px;
     text-align:center;
-}
+} */
 
 .nav-2{
     padding: 12px 16px;
