--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,60 +1,13 @@
-.nav-1{
-    text-align:center;
-    background-color: #98B4D4;
-    font-size:50px;
+* {
+  margin: 0;
+  padding: 0;
+}
+.nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.nav-container{
-    display:flex;
-    /* flex-direction: row; */
-    overflow:hidden;
-    /* background-color:#45B8AC; */
-    
-}
-
-.nav-container > div{
-    /* background-color: #98B4D4; */
-    padding:12px 14px;
-    
-   
-    
-}
-
-.li-1{
-    width: 300px;
-    height: 20px;
-    border: 3px solid #45B8AC;
-    border-radius: 3px;
-    background-color:#7FCDCD;
-}
-.li-2{
-    width: 300px;
-    height: 20px;
-    border: 3px solid #45B8AC;
-    border-radius: 3px;
-    background-color: #7FCDCD;
-}
-.li-3{
-    width: 300px;
-    height: 20px;
-    border: 3px solid #45B8AC;
-    border-radius: 3px;
-    background-color: #7FCDCD;
-}
-
-  /* .nav-1{
-    padding: 12px 16px;
-    text-align:center;
-} */
-
-.nav-2{
-    padding: 12px 16px;
-    background-color:#98B4D4;
-    
-}
-
-@media (max-width: 800px) {
-    .nav-container {
-        flex-direction: column;
-    }
+.nav-1 {
+  font-size: 30px;
 }
